--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,26 @@
   <version>1.0-SNAPSHOT</version>
   <name>happyparty Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <org.springframework.version>3.1.4.RELEASE</org.springframework.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>17.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${org.springframework.version}</version>
     </dependency>
 
     <dependency>
